--- a/package.json
+++ b/package.json
@@ -10,25 +10,10 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
-    "express": "^4.17.1",
-    "xmldom": "^0.5.0",
-    "dayjs": "^1.11.0",
-    "nanoid": "^3.3.0",
-    "joi": "^17.6.0",
-    "pg": "^8.8.0",
-    "bcryptjs": "^2.4.3",
-    "lodash": "4.17.19",
-    "marked": "0.3.9",
-    "trim-newlines": "3.0.0",
-    "minimist": "1.2.5",
-    "ansi-regex": "3.0.0",
     "ajv": "6.12.2",
     "clone": "2.1.2",
     "connect": "3.6.6",
-    "got": "9.6.0",
-    "node-fetch": "1.7.3",
-    "node-serialize": "0.0.4",
-    "fresh": "0.5.2"
+    "node-fetch": "1.7.3"
   }
   }
 
