--- a/package.json
+++ b/package.json
@@ -13,7 +13,13 @@
     "ajv": "6.12.2",
     "clone": "2.1.2",
     "connect": "3.6.6",
-    "node-fetch": "1.7.3"
+    "node-fetch": "1.7.3",
+    "long": "^5.2.3",
+    "utf8": "^3.0.0",
+    "glob": "^10.3.10",
+    "@szmarczak/http-timer": "^5.0.1",
+    "address": "^2.0.2",
+    "@babel/code-frame": "^7.23.5"
   }
   }
 
