--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "frontend-project",
   "version": "1.0.0",
-  "description": "",
+  "description": "Test project with intentional vulnerabilities for security scanning validation",
   "license": "ISC",
   "author": "",
   "type": "commonjs",
@@ -10,6 +10,102 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
-    "@angular/core": "9.1.0"
+    "ajv": "6.12.2",
+    "clone": "2.1.2",
+    "connect": "3.6.6",
+    "node-fetch": "1.7.3",
+    "long": "^5.2.3",
+    "utf8": "^3.0.0",
+    "glob": "^10.3.10",
+    "@szmarczak/http-timer": "1.1.2",
+    "address": "^2.0.2",
+    "@babel/code-frame": "7.27.1",
+    "lodash": "4.17.15",
+    "moment": "2.29.1",
+    "axios": "0.21.1",
+    "minimist": "1.2.5",
+    "request": "2.88.0",
+    "tar": "4.4.8",
+    "handlebars": "4.5.3",
+    "ejs": "2.7.4",
+    "jquery": "3.4.1",
+    "bootstrap": "4.3.1",
+    "serialize-javascript": "3.1.0",
+    "marked": "0.7.0",
+    "debug": "2.6.8",
+    "express": "4.16.0",
+    "yargs-parser": "13.1.1",
+    "shelljs": "0.8.3",
+    "xmldom": "0.1.27",
+    "validator": "10.8.0",
+    "dot-prop": "4.2.0",
+    "@babel/core": "7.12.0",
+    "@babel/preset-env": "7.12.0",
+    "@babel/traverse": "7.12.0",
+    "@babel/parser": "7.12.0",
+    "@babel/types": "7.12.0",
+    "@babel/helper-validator-identifier": "7.28.5",
+    "webpack": "4.44.0",
+    "webpack-dev-server": "3.11.0",
+    "css-loader": "3.6.0",
+    "style-loader": "1.3.0",
+    "html-webpack-plugin": "4.5.0",
+    "copy-webpack-plugin": "6.0.0",
+    "@types/node": "24.10.1",
+    "@types/express": "4.17.0",
+    "@types/lodash": "4.14.165",
+    "@types/glob": "7.2.0",
+    "@types/minimatch": "5.1.2",
+    "@types/babylon": "6.16.9",
+    "@types/babel-types": "7.0.16",
+    "react": "16.14.0",
+    "react-dom": "16.14.0",
+    "@angular/core": "9.1.0",
+    "@angular/common": "9.1.0",
+    "vue": "2.6.11",
+    "postcss": "7.0.35",
+    "autoprefixer": "9.8.6",
+    "terser-webpack-plugin": "4.2.0",
+    "semver": "5.7.1",
+    "npm": "6.14.4",
+    "ini": "1.3.5",
+    "y18n": "4.0.0",
+    "elliptic": "6.5.3",
+    "ua-parser-js": "0.7.21",
+    "ansi-regex": "5.0.0",
+    "trim": "0.0.1",
+    "path-parse": "1.0.6",
+    "cross-fetch": "3.0.4",
+    "node-forge": "0.10.0",
+    "ws": "7.4.0",
+    "dns-packet": "1.3.1",
+    "browserslist": "4.16.0",
+    "@xtuc/ieee754": "1.2.0",
+    "@xtuc/long": "4.2.2",
+    "@webassemblyjs/ast": "1.9.0",
+    "@webassemblyjs/floating-point-hex-parser": "1.9.0",
+    "@webassemblyjs/helper-api-error": "1.9.0",
+    "@webassemblyjs/helper-buffer": "1.9.0",
+    "@webassemblyjs/helper-code-frame": "1.9.0",
+    "@webassemblyjs/helper-fsm": "1.9.0",
+    "@webassemblyjs/helper-module-context": "1.9.0",
+    "@webassemblyjs/helper-wasm-bytecode": "1.9.0",
+    "@webassemblyjs/helper-wasm-section": "1.9.0",
+    "@webassemblyjs/ieee754": "1.9.0",
+    "@webassemblyjs/leb128": "1.9.0",
+    "@webassemblyjs/utf8": "1.9.0",
+    "@webassemblyjs/wasm-edit": "1.9.0",
+    "@webassemblyjs/wasm-gen": "1.9.0",
+    "@webassemblyjs/wasm-opt": "1.9.0",
+    "@webassemblyjs/wasm-parser": "1.9.0",
+    "@webassemblyjs/wast-parser": "1.9.0",
+    "@webassemblyjs/wast-printer": "1.9.0",
+    "@sindresorhus/is": "0.14.0",
+    "@sideway/address": "4.1.5",
+    "@sideway/formula": "3.0.1",
+    "@sideway/pinpoint": "2.0.0",
+    "@parcel/watcher": "2.5.1",
+    "@hapi/hoek": "9.3.0",
+    "@hapi/topo": "5.1.0"
   }
-}
+  }
